--- a/notes/cryptanalysis.tex
+++ b/notes/cryptanalysis.tex
@@ -12,7 +12,17 @@ In practice block ciphers are built using a bag of specific design principles th
 For example, the identity cipher satisfies all the mathematical properties of a block cipher. But it is of no real use since it doesn't hide
 the message (in other words, it doesn't provide message confidentiality). \newline
 Another example is the one-time pad which we have proved to be perfectly secure. But under closer examination, we see that the one-time pad can easily be broken if the key is reused more than once. (Basically, if one of the messages is known under a known plain text attack, the attacker can retrieve the key) \newline
-Here, we will study two kinds of common block cipher constructions DES (Data Encryption Standard) and AES (Advanced Encryption Standard) that are used in practice and use cryptanalysis to evaluate the effectiveness of these ciphers.\newline \newline
+Here, we will study two kinds of common block cipher constructions DES (Data Encryption Standard) and AES (Advanced Encryption Standard) which are used in practice and use cryptanalysis to evaluate the effectiveness of these ciphers.\newline \newline
+
+\subsection{Design of block ciphers}
+
+Before delving into DES and AES, let's look at some principles that both DES and AES follow in their design. According to Claude Shannon, secure block ciphers can be built by mixing the ingredients given below \cite{ClaudeShannonInfoTheory}:
+
+\begin{itemize}
+\item \textbf{Confusion}: An operation where the relationship between key and ciphertext is obscured. Both DES and AES achieve this via substitution.
+
+\item \textbf{Diffusion}: An operation where the influence of one plaintext bit is spread over many ciphertext bits in hopes of hiding statistical properties of the plaintext.
+\end{itemize}
 
 \subsection{DES: Data Encryption Standard}
 \par DES was developed at IBM in the 1970s with the support of the NSA. It has been the single most widely used cipher and was responsible for jump-starting the field of cryptanalysis. The precursor to DES was IBM's block cipher called Lucifer. Certain variants of Lucifer
@@ -22,9 +32,7 @@ DES. \cite{BonehShoupBook}.
 
 \par We will see that reducing the block size creates problems and DES is now considered insecure and should not be used. We will discuss a more secure variant of DES called Triple-DES that has been approved by NIST through to 2030 and is currently in use\cite{BonehShoupBook}. 
 
-\newpage
-
-\begin{figure}{r}{2.5in}
+\begin{figure}{r}%{2.5in}
 \center
 \begin{tikzpicture}
 \begin{tikzpicture}
@@ -75,14 +83,10 @@ DES. \cite{BonehShoupBook}.
 \label{fig:des}
 \end{figure}
 
-%\begin{figure}%{r}{1inch}
-%\right
-
-
-\newpage
+%\newpage
 
 \paragraph{Construction of DES}
-DES uses a Feistel network construction spanning 16 rounds and a different function at each round. DES at a high level takes an input of 64 bits and permutes it in an initial permutation (ip). Afterward, the 64 bits are split into 32-bit parts, \( L_0, R_0\) which are taken as inputs into the first round of the Feistel network. The input key is 56 bits and DES uses a key schedule that expands the 56-bit key into 16, 48-bit round keys which are used in each round of DES. After all the rounds of the Feistel network, DES runs one final permutation that is the inverse of the initial permutation $ip^{-1}$ before returning the output ciphertext. \newline \newline
+DES uses a Feistel network construction spanning 16 rounds and a different function at each round. DES at a high level takes an input of 64 bits and permutes it in an initial permutation (ip). Afterward, the 64 bits are split into 32-bit parts, \( L_0, R_0\) which are taken as inputs into the first round of the Feistel network. The input key is 56 bits and DES uses a key schedule that expands the 56-bit key into 16, 48-bit round keys which are used in each round of DES. After all the rounds of the Feistel network, DES runs one final permutation that is the inverse of the initial permutation $ip^{-1}$ before returning the output ciphertext.
 
 
 Let $ip$ be the permutation function and $F : \{0,1\}^{64} \to \{0,1\}^{64}$ the fiestel network function. Then for any message m where (\( |m| = 64 \) bits) and key k where (\( |k| = 56 \) bits), DES can be defined as follows:
@@ -149,11 +153,21 @@ $f(k,x):$
     return P(s)
 \end{lstlisting}
 
-
+\scribenote{HW Question idea: Give a candidate round function for Feistel that only uses linear transforms and have them give an adversary that breaks the cipher.}
 \scribenote{homework question on S boxes - How does the choice of S-boxes affect DES. What happens if S boxes are the same in every round? I guess all the round functions would end up becoming the same in the fiestel - not sure about this as expansion/permutation functions could change} \newline
 \scribenote{Another homework question - Why did they choose the S-box to transform 6 bits to 4 bits? the choice seems aribitrary here on the split}
-\par It is important to note that the DES round cipher is made up entirely of XORs and bit permutations. The S-boxes are the only operations that introduce non-linearity into the design.
+\subsubsection*{} It is important to note that the DES round cipher is made up entirely of XORs and bit permutations. The S-boxes are the only operations that introduce non-linearity into the design. All the other operations like the expansion function and mixing permutation aim to introduce diffusion into the output ciphertext. \newline
+Though S-boxes are essentially lookup tables (substitution tables) from bits of input to output. They need to follow certain design criteria for des to be secure. Some of them as given by \cite{CopersmithDES} are listed below: 
 
+\begin{itemize}
+\item Each S-box has six bits of input and four bits of output
+\item No output bit of an S-box should be too close to a linear function of the input bits
+\item If the lowest and the highest bits of the input are fixed and the four middle bits are varied, each of the possible 4-bit output values must occur exactly once.
+\item If two inputs to an S-box differ in exactly one bit or the 2 middle bits, the outputs must differ in at least two bits. 
+\item If two inputs to an S-box differ in their first two bits and are identical in their last two bits, the two outputs must be different
+\item For any nonzero 6-bit difference between inputs, no more than 8 of the 32 pairs of inputs exhibiting that difference may result in the same output difference
+\item A collision (zero output difference) at the 32-bit output of the eight S-boxes is only possible for three adjacent S-boxes.
+\end{itemize}
 
 \subsubsection*{Linear Cryptanalysis} The purpose of linear cryptanalysis is to be able to approximate a given (non-linear) block cipher using a linear expression. These linear estimates of an unknown cipher can be used to develop successful attacks against the original nonlinear-cipher. We will later look at ways to construct a linear approximation of des to launch a known plaintext attack to retrieve the key. \newline
 For a given plaintext P, ciphertext C and key K, a linear expression takes the form of: \newline
@@ -163,9 +177,9 @@ For a given plaintext P, ciphertext C and key K, a linear expression takes the f
 \end{equation}
 Here $p_1, p_2 ... p_a$, $c_1, c_2, ... c_b$ and $k_1, k_2 .... k_c$ denote fixed bit positions (example $p_1$ denotes the 1st position of the plaintext). \newline
 
-The probability that the equation \eqref{linearapprox} holds true for a randomly chosen plaintext and its corresponding ciphertext should deviate from $\frac{1}{2}$. So the effectiveness of the equation can be captured by \( |p - \frac{1}{2}|\) where \( p = \Prob{P[p_1, p_2 ... p_a] \xor C[c_1, c_2, ... c_b] = K[k_1, k_2 .... k_c]}\). \newline
+The probability that the equation \eqref{eq:linearapprox} holds true for a randomly chosen plaintext and its corresponding ciphertext should deviate from $\frac{1}{2}$. So the effectiveness of the equation can be captured by \( |p - \frac{1}{2}|\) where \( p = \Prob{P[p_1, p_2 ... p_a] \xor C[c_1, c_2, ... c_b] = K[k_1, k_2 .... k_c]}\). \newline
 
-Given an effective linear approximation, it is possible to determine one bit of information about the key using the following algorithm. It's basically a maximum-likelihood estimate. \newline
+Given an effective linear approximation, it is possible to determine one bit of information about the key using the following algorithm.\newline
 
 Given below is the algorithm to estimate this effectiveness/bias.
 
@@ -180,9 +194,9 @@ Given below is the algorithm to estimate this effectiveness/bias.
 \end{verbatim}
 
 
-The rate of success for the given algorithm increases with the increase in the number of plaintexts $N$ used or  with the increase in effectiveness \( |p - \frac{1}{2}|\) for a given linear approximation. \newline
+The rate of success for the given algorithm increases with the increase in the number of plaintexts $N$ used or  with the increase in effectiveness \( |p - \frac{1}{2}|\) for a given linear approximation. We'll try to formalize this below using Chernoff bounds. \newline
 
-\par Given below is another way of representing the effectiveness of the linear expression in terms of the number of plaintexts sampled \( q \) (The above notation is used in Matsui's original paper \cite{MatsuiDES}. 
+\par For this purpose let's use another way of representing the effectiveness of the linear expression in terms of the number of plaintexts sampled \( q \) (The notation used in the beginning is as given in Matsui's original paper \cite{MatsuiDES}. 
 For \( \forall S \in \{S_k, S_m, S_c\}: S \subsetneq \{1, 2, ... n\}, n =\) size of blockcipher and \( X[S] = \xor_{i \in S} X_i  \) where X is a bit string.
 
 \[  \Prob{K[S_k] = \Maj\left(\{M_i[S_m]\oplus C_i[S_c]\}_{i=1}^q\right)} \]
@@ -198,7 +212,7 @@ Let  $\epsilon$ be the deviation/bias of this estimate from $\frac{1}{2}$ So
 %    From the chenoff bounds equation we get, $Prob{X \le (1 + \epsilon)\frac{1}{2} + \epsilon)*q} \le e^{-\frac{\epsilon^2}{2}\frac{1}{2} + \epsilon)*q}$    
 %\end{align}' 
 \begin{theorem}
-Let $\cipher$ be a cipher such that \eqref{eq:linear-approx} holds with
+Let $\cipher$ be a cipher such that \eqref{eq:linearapprox} holds with
 $\epsilon > 0$, and let $K \in \calK$. Let $M_1,\ldots,M_q$ be sampled uniformly
 from $\bits^n$ and let $C_i = E_K(M_i)$ for $i \in \{1,\ldots,q\}$. Then 
 \bnm
@@ -213,6 +227,7 @@ from $\bits^n$ and let $C_i = E_K(M_i)$ for $i \in \{1,\ldots,q\}$. Then
 	\[ U = \Maj\left(\{M_i[S_m]\oplus C_i[S_c]\}_{i=1}^q\right) \]
 
 
+    $U$ can be expressed based on $X$, $U = 0$ if $ X \le \frac{q}{2}$. We can use Chenoff bounds to bound this sum of independent random variables.\newline
 	\begin{theorem}[Chernoff bounds]
 	Let $X = \sum_{i=1}^n X_i$, all $X_i$ independent and where $X_i = 1$ with probability $p_i$ and $X_i = 0$
 	with probability $1-p_i$. Let $\mu = \Ex[X]$. Then  
@@ -229,7 +244,7 @@ from $\bits^n$ and let $C_i = E_K(M_i)$ for $i \in \{1,\ldots,q\}$. Then
 
 	By reducing this we can get
 
-	\[ p \geq 1 -  1 - e^{-q\epsilon^2/2} \]
+	\[ p \geq 1 - e^{-q\epsilon^2/2} \]
 
 	the optimal number of plaintexts needed would be \( \frac{1}{\epsilon^2}\) (Then the exponent term becomes a small fraction). From the equation we can also see that $p$ is maximized by either having a large $q$ (using a large sample space) or having a large bias $\epsilon$.
 \end{proof}
@@ -243,12 +258,12 @@ For a given S-box \( S_a (a = 1,2 ... 8) \),
 Since there are \( 2^6 \) possible inputs and \( 2^4 \) possible outputs to the Sbox, we'll define 
 \[ NS_{a} (\alpha, \beta) = \# \{ x | 0 \leq x \le 64 , (\xor_{s=0}^{5} x[s] \land \alpha[s]) = (\xor_{t = 0}^{3} S_a[x][t] \land \beta[t]) \}\]
 
-$NS_{a} (\alpha, \beta)$ essentially tries to capture the correlation of the input bits and output bits in a linear form (in the form of xors) by exploiting the probability bias based on this linear approximation. This allows estimating bits from a round function. For example $NS_{5} (16, 15) = 12$ implies that the 4th bit of \(S_5\) coincides with an XORed value of all output bits with probabilityy \( \frac{12}{64} \)
+$NS_{a} (\alpha, \beta)$ essentially tries to capture the correlation of the input bits and output bits in a linear form (in the form of xors) by exploiting the probability bias based on this linear approximation. This allows estimating bits from a round function. For example $NS_{5} (16, 15) = 12$ implies that the 4th bit of \(S_5\) coincides with an XORed value of all output bits with probability \( \frac{12}{64} \)
 
 This linear approximation can be generalized to the entire round function by taking into account the expansion function and the permutation.
 One key bit can now be recovered using the algorithm described initially.
 
-\textbf{generalizing linear approximation to all of des} 
+\paragraph{generalizing linear approximation to all of des} 
 Individually assessing the input/output relationship between each of the s-boxes also lets us chain them to obtain the approximation
 for the entire Feistel network. And the bias on each round can be treated as independent variables. This lets us combine the biases 
 
@@ -272,14 +287,15 @@ $p_i$ of being one and $1-p_i$ of being zero. Then
 %\enm
 
 
-\textbf{Recovering many bits of des} The basic intuition is to realize that we can build partial linear approximations of only a subset
+\paragraph{Recovering many bits of des} 
+The basic intuition is to realize that we can build partial linear approximations of only a subset
 of the rounds using the piling up lemma. A combination of these linear approximations should enable us to recover multiple bits of des
 and brute force the rest. 16 round des breaks with \(2^{43} \)  known plaintext/ciphertext pairs.
 \ )
 
 Linear cryptanalysis can mainly be used to reduce the search space of keys based on the recovered bits and launch a known plaintext attack.
 
-\subsubsection*{differential cryptanalysis}
+\paragraph{differential cryptanalysis}
 Differential cryptanalysis is similar to its linear counterpart in that it exploits the high probability of certain occurrences of plaintext
 differences and differences into the output. However, it aims to capture the relationship using non-linear expressions.
 
@@ -288,76 +304,60 @@ The aim here is to find \( \delta_m \) such that \( \delta_c \) holds for the gi
 
 In DES, Multiple of these differentials for s-boxes can be chained together like in the linear case and this lead to recovering bits of the key.
 
-\scribenote{potential question idea: difference between DES, 2DES and 3DES in terms of security}
+\scribenote{2DES Question idea: Given a brute force attack for DES, how to build the meet-in-the-middle attack for 2DES}
 
-\textbf*{aes}
-\scribenote{TODO: Brief notes about aes cipher}
-\scribenote{TODO: add fixed diagram for aes cipher}
+\paragraph{AES: Advanced Encryption Standard}
 
-
-\iffalse
-
-Homework problem : key expansion function in des
-Homeowrk problem: 
-
-The size of the look-up tables, mapping 6-bits to 4-bits, was the largest that could be accommodated
-on a single chip using 1974 technology.
-
-\begin{wrapfigure}[19]{L}{0.4\textwidth}
+\begin{wrapfigure}{r}{2.3in}
+\center
 \begin{tikzpicture}
-    \node(r0) at ($(0,0)$)  {$R_0$};
-    \node (l0) [left of = r0, node distance=3.0cm] {$L_0$};
-    \def\lastz{0}
-    \foreach \z[remember=\z as \lastz] in {1, 2, 3} {
-      \ifthenelse{\z=3} {
-      		\node[draw,thick,minimum width=0.75cm] (\prf\z) [below of = r\lastz, node distance=1.1cm]  {$\prf_{\prfkey}^{n}$};
-     	 \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\bm{\langle}\z\bm{\rangle}$};
-     	 \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\bm{\langle}\z\bm{\rangle}$};
-     	 \node (xor\z) [XOR, below of = \prf\z, node distance = 0.75cm, scale=1.0] {};
-     	 \node (junction0\z) [below of = r\lastz, node distance = 0.5cm] {};
-     	 \node (junction1\z) [below of = l\lastz, node distance = 0.75cm] {};
-     	 \node (junction2\z) [below of = l\lastz, node distance = 1.5cm] {};
-     	 \node (junction3\z) [left of = xor\z, node distance = 0.5cm] {};
-     	 \node (r\z) [below of = xor\z, node distance=0.75cm] {$R_n$};
-     	 \node (l\z) [left of = r\z, node distance=3.0cm] {$L_n$};
-     	 \path[->]
-        	(r\lastz) edge[dotted] node {} (\prf\z)
-      	  (\prf\z) edge[thick] node {} (xor\z)
-      	  (junction3\z.center) edge[dotted] node {} (xor\z)
-      	  (xor\z) edge[thick] node {} (r\z)
-      	  (junction2\z.center) edge[thick] node {} (l\z)
-      	  (ctr\z) edge[dotted] node {} (\prf\z.east);
-        	\path[-]
-        	(l\lastz.south) edge[dotted] node {} (junction1\z.center)
-       	 (junction0\z.center) edge[dotted] node {} (junction2\z.center)
-        	(junction1\z.center) edge[dotted] node {} (junction3\z.center);
 
-      }{
-     	 \node[draw,thick,minimum width=0.75cm] (\prf\z) [below of = r\lastz, node distance=1.1cm]  {$\prf_{\prfkey}^\z$};
-     	 \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\bm{\langle}\z\bm{\rangle}$};
-     	 \node (xor\z) [XOR, below of = \prf\z, node distance = 0.75cm, scale=1.0] {};
-     	 \node (junction0\z) [below of = r\lastz, node distance = 0.5cm] {};
-     	 \node (junction1\z) [below of = l\lastz, node distance = 0.75cm] {};
-     	 \node (junction2\z) [below of = l\lastz, node distance = 1.5cm] {};
-     	 \node (junction3\z) [left of = xor\z, node distance = 0.5cm] {};
-     	 \node (r\z) [below of = xor\z, node distance=0.75cm] {$R_\z$};
-     	 \node (l\z) [left of = r\z, node distance=3.0cm] {$L_\z$};
-     	 \path[->]
-        	(r\lastz) edge[thick] node {} (\prf\z)
-      	  (\prf\z) edge[thick] node {} (xor\z)
-      	  (junction3\z.center) edge[thick] node {} (xor\z)
-      	  (xor\z) edge[thick] node {} (r\z)
-      	  (junction2\z.center) edge[thick] node {} (l\z)
-      	  (ctr\z) edge[thick] node {} (\prf\z.east);
-        	\path[-]
-        	(l\lastz.south) edge[thick] node {} (junction1\z.center)
-       	 (junction0\z.center) edge[thick] node {} (junction2\z.center)
-        	(junction1\z.center) edge[thick] node {} (junction3\z.center);
-    	}
-    }
+
+\node[] (m_0) {};
+
+\foreach \i[remember=\i as \lastz] in {1, 2,...,3} {
+   \pgfmathtruncatemacro\label{\i - 1};
+   \node[circle, draw] (x\i) [below of = m_\label, node distance = 1cm] {\( + \)};
+
+   \node[draw, rectangle, minimum height = 0.5cm, minimum width = 1.3cm] (n\i) [below of = x\i, node distance = 1cm] {SubBytes};
+   \node[draw, rectangle, minimum height = 0.5cm, minimum width = 1.3cm] (m_\i) [below of = n\i, node distance = 0.55cm] {ShiftRows \(+\) MixColumns};
+
+   \node (k\i) [right of = x\i, node distance = 1cm] {k\i};
+   \path[->, draw] (k\i) -- (x\i);
+
+   \path[->, draw] (m_\label) -- (x\i);
+
+   \path[->, draw] (x\i) -- (n\i);
+
+
+} 
+
+
+\node[] (dots) [below of = m_\lastz,  node distance = 1.5cm] {\( \vdots \)};
+
+\path[->, dashed, draw] (m_\lastz) -- (dots);
+%\path[->, draw] (msg) -- (n1);
 
 \end{tikzpicture}
-\caption{A general n-round fiestel network}
-\label{fig:feistel-3}
+
+\caption{AES design}
+\label{fig:aesDesign}
 \end{wrapfigure}
-\fi
+
+
+%\scribenote{TODO: Brief notes about aes cipher}
+AES is another very popular block cipher design. However unlike DES, AES doesn't use a fiestel network. AES has lesser rounds because it encrypts all  bits at every round. (DES's round functions only encrypt half of the bits in each round). 
+
+AES consists of so-called layers. Every layer manipulates all 128 bits. Each layer constitutes of 1 of the building blocks listed below: \newline
+
+\begin{itemize}
+\item \textbf{Key Addition layer} : This is a 128 bit round key obtained from the key schedule on the given main key. It is to be xored to the input state. (The key schedule is computed in a similar manner to DES)
+\item \textbf{Byte Substitution layer (S-Box)} : This introduces confusion to the data by transforming inputs to outputs in a non-linear manner.
+\item \textbf{Diffusion layer} : Consists of two sub-functions which are both linear operations. 1. ShiftRows - permutes the state at a byte level 2. MixColumn - A matrix operation that combines blocks of 4 bytes.
+\end{itemize}
+
+AES has a byte oriented structure whereas DES make heavy use of bit permutations. The S-boxes in AES also follow a more algebraic structure (Use a 2 step mathematical transformation: Galois field inversion $+$ affine mapping). In DES, the S-boxes are simple random substitution tables as discussed previously. \newline
+
+\scribenote{TODO: Mini section about ARX ciphers}
+
+
