--- a/notes/main.tex
+++ b/notes/main.tex
@@ -100,6 +100,14 @@
 \newpage
 \input{freqanalysis}
 \newpage
+\input{tweakciphers}
+\newpage
+\input{symenc}
+\newpage
+\input{authenc}
+
+
+
 
 \printbibliography
 
