--- a/notes/prp/feistel.tex
+++ b/notes/prp/feistel.tex
@@ -12,7 +12,7 @@ We will examine one such construction called a Feistel network which is used in 
 
 \paragraph{Feistel networks}
 A Feistel round transforms an arbitrary function into a permutation.
-Define $\cipher:\braces*{0,1}^{2n}\rightarrow\braces*{0,1}^{2n}$ as the permuation constructed using one Feistel round with function $\prf:\braces*{0,1}^k\times\braces*{0,1}^n\rightarrow\braces*{0,1}^n$.
+Define $\cipher:\braces*{0,1}^{2n}\rightarrow\braces*{0,1}^{2n}$ as the permutation constructed using one Feistel round with function $\prf:\braces*{0,1}^k\times\braces*{0,1}^n\rightarrow\braces*{0,1}^n$.
 The function $\prf$ is known as the round function of the Feistel network.
 \begin{wrapfigure}{r}{2in}
 \center
@@ -50,8 +50,9 @@ L_1 &\gets R_0\\
 R_1 &\gets L_0 \oplus \prf_{\prfkey}(R_0)\,.
 \end{align*}
 
+
 \begin{example}[1-round Feistel network is a permutation]
-  First, let us see why the Feistel construction builds a permutation.
+  \pfreadernote{Should examples be in sub-sections? i.e., example 3.1, 3.2.} First, let us see why the Feistel construction builds a permutation from an arbitrary function.
   Notice that as long as the round function $\prf_{\prfkey}$ is defined on all inputs from domain $\braces*{0,1}^n$ then $\cipher$ is defined on all inputs from domain $\braces*{0,1}^{2n}$.
   Next, we show that any output of $\cipher$, $L_1\concat R_1$, corresponds to a unique input $L_0\concat R_0$.
   Even though $\prf_{\prfkey}$ is not assumed to be invertible, since the input to $\prf_{\prfkey}$, $R_0$, is passed directly to the output as $L_1$, we can invert as follows
@@ -84,8 +85,8 @@ R_1 &\gets L_0 \oplus \prf_{\prfkey}(R_0)\,.
 
 We see that it is trivial to distinguish a 1-round Feistel network from a random permutation, since the second half of the input is mapped directly to the first half of the output.
 Does the randomness of the permutation improve by performing numerous Feistel rounds?
-One way to construct a multi-round Feistel network by feeding the outputs of the previous round as inputs to the next round, and where each round is keyed with a different unique key.
-To use only a single key, we consider an alternate construction, where the round function $\prf$ in each Feistel round has a different domain, $\prf:\braces{0,1}^{k}\times\braces{0,1}^{2n}\rightarrow\braces{0,1}^n$.
+One way to construct a multi-round Feistel network is by feeding the outputs of the previous round as inputs to the next round, and where each round is keyed with a different unique key.
+To use only a single key, we could consider an alternate construction, where the round function $\prf$ in each Feistel round has a different domain, $\prf:\braces{0,1}^{k}\times\braces{0,1}^{2n}\rightarrow\braces{0,1}^n$.
 As before, the round function will take in the second half of the input, but it will also take in an $n$-bit round counter.
 To stack Feistel rounds into a multi-round Feistel network, we simply ensure that each round uses a different round counter.
 Figure~\ref{fig:feistel-3} depicts a 3-round Feistel network constructed in this manner.
