--- a/notes/prp/luby-rackoff.tex
+++ b/notes/prp/luby-rackoff.tex
@@ -19,8 +19,8 @@ we give a $\PRF_{\prf}$-adversary $\advB$ making at most $3q$ queries such that
 
 \begin{proof}
 Without loss of generality, we consider an adversary $\advA$ that only makes unique queries to oracle $\Fn$.
-\scribenote{Be more formal about why this okay?}
-We bound the advantage of $\PRP$ adversary $\advA$ by bounding the advantage of each of a series of game hops.
+\scribenote{Be more formal about why this okay?} \pfreadernote{Looking at the Boneh-Shoup explanation for this, I think it would be better to be more clear on why this is ok}
+We bound the advantage of $\PRP$ adversary $\advA$ by bounding its advantage in each game in a series of game hops.
 Pseudocode for these games is given in Figure~\ref{fig:games-luby-rackoff}.
 
 Game $\G0$ is constructed exactly as $\PRP1^{\advA}_{\Feistel}$; the oracle pseudocode expands out the computation of the 3-round Feistel network $\Feistel$:
@@ -49,7 +49,7 @@ $R_3 \gets L_2 \oplus \Fn(\langle 3\rangle \concat R_2)$\\
 Return $L_3 \concat R_3$
 }
 \end{center}
-\pfreadernote{Should this game be a figure?}
+\pfreadernote{Should this game be a figure?} \pfreadernote{Julia: since it's just an adversary, it's probably ok?}
 Adversary $\advB$ simulates $\FnSim$ by running the 3-round Feistel network but replacing the round function with a call to its own oracle $\Fn$.
 In \PRF0, where $\advB$'s oracle $\Fn$ acts as the round function $\prf$, $\advB$ runs exactly $\G0$.
 In \PRF1, where $\Fn$ acts as a random function $\rho$, $\advB$ runs exactly $\G1$.
@@ -194,7 +194,7 @@ First, consider the probability $\G4\setsbad$ on query $i$; call this event $W_i
 This event can be considered as two separate events depending on where the $\bad$ flag is set:
 denote the event that $R_1$ collides as $W_i^1$ and the event that $R_2$ collides as $W_i^2$.
 
-It is simple to bound case of the probability of $W_i^2$.
+It is simple to bound the probability of $W_i^2$.
 The probability of $R_2 = L_1 \xor X_2$ colliding with a previous $R_2$ on query $i$ is bounded by $q/2^n$ since $X_2$ is a fresh random string.
 
 Bounding the probability of $W_i^1$ is more nuanced.
@@ -207,6 +207,7 @@ Since in $\G4$, the outputs of $\Fn$ are independently drawn random samples, we 
 \scribenote{May need to argue this more formally?}
 
 Thus, by two applications of the union bound, we have
+\pfreadernote{specify that initial value for sum is i=1 below}
 \begin{align*}
   \Prob{\G4 \setsbad} &\le \sum_i^q \Prob{W_i}\\
   &\le \sum_i^q \Prob{W_i^1} + \Prob{W_i^2}\\
@@ -236,6 +237,6 @@ Finally, to put it all together,
   \item 2-round Feistel is not a PRP
   \item Show security of 3-round Feistel with 3 different keys
   \item What happens when same key is used across Feistel rounds? (I don't know)
-  \item Show 3-round Feistel is not Strong PRP (Strong PRP gets access to both forward and inverse oracle)
+  \item Show 3-round Feistel is not Strong PRP (Strong PRP gets access to both forward and inverse oracle) \pfreadernote{this would require providing strong PRP game}
   \item Show 4-round Feistel is Strong PRP
 \end{itemize}
