added msgauth notes

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -502,7 +502,6 @@
 % Definitions for this paper
 \newcommand{\secparam}{\kappa}
 \newcommand{\ctr}{\mathit{ctr}}
-\newcommand{\MA}{\mathsf{MA}}
 \newcommand{\MAC}{\mathsf{MAC}}
 \newcommand{\kwfont}[1]{\textrm{#1}}
 \newcommand{\procfont}[1]{\textbf{#1}}
@@ -868,7 +867,9 @@
 \newcommand{\CTXTce}{\textnormal{CTXT}}
 \newcommand{\PTXT}{\textnormal{PTXT}}
 
+\newcommand{\UFCMA}{\textnormal{UF-CMA}}
 \newcommand{\MUUFCMA}{\textnormal{MU-UF-CMA}}
+\newcommand{\SUFCMA}{\textnormal{SUF-CMA}}
 
  \newcommand{\AdvMUUFCMA}[2]{\Adv^{\mathrm{mu\dash uf\dash cma}}_{#1}(#2)}
  \newcommand{\AdvUFCMA}[2]{\Adv^{\mathrm{uf\dash cma}}_{#1}(#2)}
@@ -959,7 +960,6 @@
 \newcommand{\encsign}{{\cal ES}}
 \newcommand{\sign}{{\sf S}}
 \newcommand{\mac}{{\sf Mac}}
-%\newcommand{\ver}{{\sf Vfy}}
 \newcommand{\verdecc}{{\cal VD}}
 \newcommand{\henc}{{\cal HE}}
 \newcommand{\hkg}{{\cal HK}}
@@ -1555,7 +1555,6 @@
 \newcommand{\andthen}{\thinspace : \thinspace}
 \newcommand{\bitsorc}{\$}
 \newcommand{\newmsg}{\mathrm{new\mbox{-}msg}}
-\newcommand{\mtag}{T}
 
 %\newcommand{\botse}{\bot_e}
 %\newcommand{\botma}{\bot_m}
@@ -1624,7 +1623,6 @@
 \newcommand{\padlenmax}{\psi}
 \newcommand{\padblen}{p}
 \newcommand{\tagidx}{t}
-\newcommand{\mactag}{\mtag}
 \newcommand{\numpadblocks}{\gamma}
 \newcommand{\header}{H}
 
@@ -1732,7 +1730,6 @@
 \newcommand{\bktz}[1]{\bracketize{#1}}
 \newcommand{\dbktz}[2]{\bracketize{#1}\bracketize{#2}}
 \newcommand{\sid}{\mathrm{sid}}
-\newcommand{\ver}{\mathrm{ver}}
 \newcommand{\kex}{\mathrm{kex}}
 \newcommand{\kexguess}{\mathrm{kex}^*}
 \newcommand{\hello}{\mathrm{hel}}
@@ -2097,7 +2094,7 @@
 \newcommand{\REAL}{\textnormal{REAL}}
 \newcommand{\RAND}{\textnormal{RAND}}
 \newcommand{\ROR}{\textnormal{ROR}}
-\newcommand{\AdvROR}[2]{\Adv^{\mathrm{ind\$}}_{#1}(#2)}
+\newcommand{\AdvROR}[2]{\Adv^{\mathrm{ror}}_{#1}(#2)}
 \newcommand{\RORCCA}{\textnormal{ROR-CCA}}
 \newcommand{\AdvRORCCA}[2]{\Adv^{\mathrm{ror\dash cca}}_{#1}(#2)}
 
@@ -2114,6 +2111,21 @@
 \newcommand{\EM}{\textnormal{EM}}
 \newcommand{\Sbox}{\textnormal{Sbox}}
 \newcommand{\myInd}{\hspace*{1em}}
+
+\newcommand{\MA}{\mathsf{MA}}
+\newcommand{\mtag}{\mathsf{tag}}
+\newcommand{\ver}{\mathsf{ver}}
+
+\newcommand{\msgset}{\textsf{MsgSet}}
+\newcommand{\pairset}{\textsf{PairSet}}
+\newcommand{\TagOracle}{\textnormal{Tag}}
+\newcommand{\VerOracle}{\textnormal{Ver}}
+
+\newcommand{\cAU}{\textnormal{cAU}}
+\newcommand{\AdvcAU}[2]{\Adv^{\mathrm{cau}}_{#1}(#2)}
+
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
