--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -651,6 +651,8 @@
 
 \newcommand{\INDCPA}{\textnormal{IND-CPA}\xspace}
 \newcommand{\INDCCA}{\textnormal{IND-CCA}\xspace}
+\newcommand{\INDRAND}{\textnormal{IND\$}\xspace}
+\newcommand{\INDSIM}{\textnormal{IND-SIM}\xspace}
 
 \newcommand{\INDAdv}{\calI}
 \newcommand{\TrivAdvI}{\calI_\emptystr}
@@ -1833,7 +1835,11 @@
 \newcommand{\ghash}{\mathsf{GHASH}}
 \newcommand{\sshare}{\mathsf{SShare}}
 
-
+% randomized symmetric encryption defs
+\newcommand{\SEenc}{\textsf{Enc}}
+\newcommand{\SEencsim}{\textsf{EncSim}}
+\newcommand{\RORreal}{\textnormal{REAL}}
+\newcommand{\RORrand}{\textnormal{RAND}}
 
 
 %newcommand{\ctxtlen}{\ell}
